@@ -787,7 +787,7 @@ BEGIN
     CONTROL         "",CTL_VOLUME_TRACKBAR_NOISE,"msctls_trackbar32",TBS_AUTOTICKS | TBS_VERT | TBS_BOTH | WS_TABSTOP,229,150,28,83
     GROUPBOX        "PCM",135,271,142,44,93,WS_GROUP
     CONTROL         "",CTL_VOLUME_TRACKBAR_PCM,"msctls_trackbar32",TBS_AUTOTICKS | TBS_VERT | TBS_BOTH | WS_TABSTOP,279,150,28,83
-    GROUPBOX        "Volume Control",IDC_STATIC,10,127,314,127
+    GROUPBOX        "Volume Control",IDC_VOLUMEGROUP,10,127,314,127
     PUSHBUTTON      "Restore defaults",IDC_SOUND_RESTOREDEFAULTVOL,19,238,56,11
     LTEXT           "",ID_SOUND_TRITOP,76,135,38,8
     LTEXT           "",ID_SOUND_QUALITYNOTIFY,170,133,144,8
